--- a/templates/index.html
+++ b/templates/index.html
@@ -132,6 +132,10 @@
 
   </div>
 
+
+    <!-- Matomo Image Tracker-->
+    <img referrerpolicy="no-referrer-when-downgrade" src="http://piwik.feuerwehr-berge.de/matomo.php?idsite=2&amp;rec=1" style="border:0" alt="" />
+    <!-- End Matomo -->
 </main><!-- /.container -->
 
 
