Delete Tracking code, add redirect from /

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,17 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="de">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
-    <meta name="generator" content="Hugo 0.80.0">
     <title>Fear & Greed</title>
-
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/starter-template/">
-
-    
-
     <!-- Bootstrap core CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
@@ -50,7 +44,7 @@
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
       <ul class="navbar-nav me-auto mb-2 mb-md-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/">Fear & Gread</a>
+          <a class="nav-link active" aria-current="page" href="/fug">Fear & Gread</a>
         </li>
         <!--
         <li class="nav-item">
@@ -131,11 +125,6 @@
       <p>Crypto:<a id="fug_cryptoGauge"></a><p>
 
   </div>
-
-
-    <!-- Matomo Image Tracker-->
-    <img referrerpolicy="no-referrer-when-downgrade" src="http://piwik.feuerwehr-berge.de/matomo.php?idsite=2&amp;rec=1" style="border:0" alt="" />
-    <!-- End Matomo -->
 </main><!-- /.container -->
 
 
