--- a/templates/index.html
+++ b/templates/index.html
@@ -4,33 +4,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
+    <meta name="author" content="Hambert">
     <title>Fear & Greed</title>
     <!-- Bootstrap core CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-
-
-    <style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        user-select: none;
-      }
-
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
-    </style>
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     
     <!-- Custom styles for this template -->
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-    <script src="{{ url_for('static', filename='gauge.min.js') }}" type="text/javascript"></script>
-
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
   </head>
   <body>
     
@@ -96,12 +78,17 @@
         </tr>
       </tbody>
     </table>
+    <div class="row">
+      <div class="col">
+        <canvas id="fug_cnnCanvas"></canvas>
+        <p>CNN:<a id="fug_cnnGauge"></a><p>
+      </div>
+      <div class="col chart">
+        <div id="chart_div"></div>
+      </div>
+    </div>
 
-
-      <canvas id="fug_cnnCanvas"></canvas>
-      <p>CNN:<a id="fug_cnnGauge"></a><p>
-
-
+    
     <table class="table">
       <thead>
         <tr>
@@ -126,92 +113,33 @@
 
   </div>
 </main><!-- /.container -->
-
-
+<script src="{{ url_for('static', filename='gauge.min.js') }}" type="text/javascript"></script>
+<script src="{{ url_for('static', filename='script.js') }}" type="text/javascript"></script>
 <script>
-  var requestURL = "/api";
+  // Chart
 
-  var xmlhttp = new XMLHttpRequest();
+  google.charts.load('current', {packages: ['corechart', 'line']});
+  google.charts.setOnLoadCallback(drawBackgroundColor);
 
-  xmlhttp.onreadystatechange = function() {
-      if (this.readyState == 4 && this.status == 200) {
-          fillTable(jsonData=this.responseText);
-      }
-  };
-  xmlhttp.open("GET", requestURL, true);
-  xmlhttp.send();
+  function drawBackgroundColor() {
+      var data = new google.visualization.DataTable();
 
-    function fillTable(jsonData){
-        // (B) PARSE THE JSON STRING INTO OBJECT FIRST
-        //var data = '{"cnn_fug_now": {"value": 48.0, "sourceDate": "2021-02-26T17:04:00"}, "btc_fug_now": {"value": 56.0, "sourceDate": "2021-02-27T15:25:32.01939"}}';
-      data = JSON.parse(jsonData);
-        // console.table(data);
-        
+      data.addColumn('date', 'Time of Day');
+      data.addColumn('number', 'FuG');
+      data.addRows([
+        {{ data |safe }}
+      ]);
 
-      var table = document.getElementById("fugTable")
+      var options = {
+        'legend':'none'
+      };
 
-      for (let key in data) {
-        var d = new Date(data[key]["sourceDate"]);
-
-        if (key=="cnn_fug_now"){
-          document.getElementById("fug_cnn").innerHTML = data[key]["value"];
-          gauge.set(data[key]["value"]);
-          document.getElementById("fug_cnnDate").innerHTML = d.toLocaleString();
-        } else if (key=="btc_fug_now"){
-          document.getElementById("fug_crypto").innerHTML = data[key]["value"];
-          gauge2.set(data[key]["value"]);
-          document.getElementById("fug_cryptoDate").innerHTML = d.toLocaleString();;
-        }
-      }
+      var chart = new google.visualization.LineChart(document.getElementById('chart_div'));
+      chart.draw(data, options);
     }
+</script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 
-  /////// gauge
-
-  var opts = {
-      angle: 0, // The span of the gauge arc
-      lineWidth: 0.29, // The line thickness
-      radiusScale: 0.86, // Relative radius
-      pointer: {
-        length: 0.53, // // Relative to gauge radius
-        strokeWidth: 0.046, // The thickness
-        color: '#000000' // Fill color
-      },
-      limitMax: false,     // If false, max value increases automatically if value > maxValue
-      limitMin: false,     // If true, the min value of the gauge will be fixed
-      colorStart: '#6FADCF',   // Colors
-      colorStop: '#8FC0DA',    // just experiment with them
-      strokeColor: '#E0E0E0',  // to see which ones work best for you
-      generateGradient: true,
-      highDpiSupport: true,     // High resolution support
-      
-    };
-    var target = document.getElementById('fug_cnnCanvas'); // your canvas element
-    var gauge = new Gauge(target).setOptions(opts); // create sexy gauge!
-    gauge.setTextField(document.getElementById("fug_cnnGauge"));
-    gauge.maxValue = 100; // set max gauge value
-    gauge.setMinValue(0);  // Prefer setter over gauge.minValue = 0
-    gauge.animationSpeed = 10; // set animation speed (32 is default value)
-    
-
-    target = document.getElementById('fug_cryptoCanvas'); // your canvas element
-    var gauge2 = new Gauge(target).setOptions(opts); // create sexy gauge!
-    gauge2.setTextField(document.getElementById("fug_cryptoGauge"));
-    gauge2.maxValue = 100; // set max gauge value
-    gauge2.setMinValue(0);  // Prefer setter over gauge.minValue = 0
-    gauge2.animationSpeed = 10; // set animation speed (32 is default value)
-
-
-    window.addEventListener('load', (event) => {
-      console.log('page is fully loaded');
-    });
-
-  </script>
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-
-  </body>
-
-
+</body>
 
 </html>
